sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:8: error: not found: value j
  	for(i<-0 to getNombreValeurs()-2-j)
                                         ^AlgBubbleSort3:16: error: not found: value j
    j=j+1
    ^