sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() 
{
  var swap=true
  while(swap)
  {
  	swap=false
  	for(i<-0 to getNombreValeurs()-2-j)
  	{
    	if(plusPetit(i+1,i))
    	{
      	echange(i,i+1)
      	swap=true
    	}
  	}
    j=j+1
  }
}